add change mobile header and cms block.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/list/items.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/list/items.phtml
@@ -360,7 +360,7 @@ require(['jquery','cdz_slider'],function($){
 			dots: false,
 			rtl: ThemeOptions.rtl_layout == 1 ? true : false,
 			responsive:{
-				0:{items: <?php echo ($itemSlider > 2)  ?>},
+				0:{items: <?php echo ($itemSlider = 6) ? 2 : ($itemSlider > 2) ?>},
 				480:{items:	<?php echo ($itemSlider > 2)   ?>},
 				640:{items:	<?php echo ($itemSlider > 2)  ?>},
 				768:{items:	<?php echo  ($itemSlider - 1) ?>},
