--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/copyright.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/copyright.phtml
@@ -8,13 +8,15 @@
     <span class="f-left" style="margin-right: 24px;color: #ffffff;">
 		<?php /* @escapeNotVerified */ echo $block->getCopyright() ?>
 	</span>
-    <span style="margin-right: 12px;">
-        <a style="color: #ffffff;" href="#">Privacy Policy</a>
-    </span>
-    <span style="margin-right: 12px;">
-        <a style="color: #ffffff;" href="#">Terms of Service</a>
-    </span>
-    <span>
-        <a style="color: #ffffff;" href="#">Sitemap</a>
-    </span>
+    <div class="footer-siteinfo">
+        <span class="footer-span" style="margin-right: 12px;">
+            <a style="color: #ffffff;" href="#">Privacy Policy</a>
+        </span>
+        <span class="footer-span" style="margin-right: 12px;">
+            <a style="color: #ffffff;" href="#">Terms of Service</a>
+        </span>
+        <span>
+            <a style="color: #ffffff;" href="#">Sitemap</a>
+        </span>
+    </div>
 </small>
