--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_footer.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_footer.less
@@ -10,6 +10,89 @@
 @footer__border: @footer_border;
 
 .page-footer{
+    .footer-siteinfo {
+        display: inline-block;
+    }
+    .footer-facebook {
+        display: inline-block !important;
+        margin-right: 12px;
+        &:before {
+            display: inline-block;
+            font-family: 'icomoon';
+            font-style: normal;
+            font-weight: normal;
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: '\e935';
+            font-size: 24px;
+            color: #666666;
+        }
+    }
+    .footer-twitter {
+        display: inline-block !important;
+        margin-right: 12px;
+        &:before {
+            display: inline-block;
+            font-family: 'icomoon';
+            font-style: normal;
+            font-weight: normal;
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: '\e920';
+            font-size: 24px;
+            color: #666666;
+        }
+    }
+    .footer-pinterest {
+        display: inline-block !important;
+        margin-right: 12px;
+        &:before {
+            display: inline-block;
+            font-family: 'icomoon';
+            font-style: normal;
+            font-weight: normal;
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: '\e91e';
+            font-size: 24px;
+            color: #666666;
+        }
+    }
+    .footer-youtube {
+        display: inline-block !important;
+        margin-right: 12px;
+        &:before {
+            display: inline-block;
+            font-family: 'icomoon';
+            font-style: normal;
+            font-weight: normal;
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: '\e91c';
+            font-size: 24px;
+            color: #666666;
+        }
+    }
+    .footer-instagram {
+        display: inline-block !important;
+        margin-right: 12px;
+        &:before {
+            display: inline-block;
+            font-family: 'icomoon';
+            font-style: normal;
+            font-weight: normal;
+            line-height: 1;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            content: '\e91b';
+            font-size: 24px;
+            color: #666666;
+        }
+    }
     .block-static-block {
         &.widget {
             margin-bottom: 48px;
