--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/layout/catalog_product_view.xml
@@ -45,6 +45,7 @@
 	</referenceContainer>
 	<move element="product.info.media" destination="product.info.left" before='-'/>
 	<move element="product.info.main" destination="product.info.left" />
+    <move element="catalog.product.related" destination="content" after="product.main.content" />
 
     <referenceBlock name="catalog.compare.sidebar" remove="true" />
     <referenceBlock name="wishlist_sidebar" remove="true" />
