--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_blocksidebar.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_blocksidebar.less
@@ -110,7 +110,7 @@
 
 	.page-main .sidebar .block{
 		&:not(.block-static-block){
-			margin-bottom:2rem;
+			margin:0;
 			.lib-css(background, @block__background);
 			> .empty,
 			.block-content,
