--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Review/templates/product/view/list.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Review/templates/product/view/list.phtml
@@ -8,7 +8,7 @@
 /** @var \Magento\Framework\View\Helper\SecureHtmlRenderer $secureRenderer */
 
 $_items = $block->getReviewsCollection()->getItems();
-$format = $block->getDateFormat() ?: \IntlDateFormatter::SHORT;
+$format = $block->getDateFormat() ?: \IntlDateFormatter::MEDIUM;
 ?>
 <?php if (count($_items)): ?>
 <div class="block review-list" id="customer-reviews">
