--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
@@ -3,7 +3,7 @@
 .no-padding{ padding:0;}
 .no-padding-left{padding-left:0 !important}
 .page-main .block.block-static-block {
-    margin-bottom: 20px;
+    margin-bottom: 4px;
 }
 .abs-line-left{
 	position:relative;
@@ -201,7 +201,7 @@
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
 	.cms-index-index .page-main{
-		padding-top:20px;
+		padding-top:0;
 	}
 	.header-bottom-right{
 		float:none !important;
@@ -438,7 +438,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 //New product
 .box-product{
 	.lib-css(background, @main_block_background);
-	.lib-css(border, 1px solid @main_border);
+	//.lib-css(border, 1px solid @main_border);
 	.block-title{
 		.lib-css(border-bottom, 1px solid @main_border);
 		padding: 11px 20px 0;
@@ -500,10 +500,11 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		font-size:16px
 	}
 	.product-item-info .product-item-details{
-		padding:0 0 15px;
+		padding:0;
 		display: flex;
 		flex-direction: column;
-		justify-content: flex-end;
+		justify-content: flex-start;
+        width: 44vw;
 	}
 	.actions-secondary .action.tocompare{
 		display:inline-block
@@ -512,7 +513,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		background:transparent
 	}
 	.cdz-buttons-inner{
-		margin-top: 15px;
+		//margin-top: 15px;
 		.tocart.primary{
 			margin-bottom:0;
 			font-size:12px;
@@ -552,6 +553,8 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		padding:10px;
 		.product-item-info{
 			border:0;
+            flex-flow: column;
+            align-items: center;
 		}
 		&:hover {
 			.product-item-info{
@@ -639,7 +642,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		border: 1px solid @main_border;
 	}
 	&.block:not(.block-static-block) .block-content{
-		padding: 0 !important;
+		padding: 8px 0 !important;
 	}
 	.products-list .cdz-buttons-container form,
 	.products-grid .cdz-buttons-container form{
@@ -673,7 +676,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 					width: 100%;
 					height: 100%;
 					background: #ffffff;
-					display: flex;
+					display: none;
 					align-items: center;
 					z-index:3;
 					.abs-opacity(0);
@@ -708,9 +711,9 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 			.product-images{
 				position:relative;
 				float:left;
-				width:74px;
-				height:74px;
-				margin-right:15px;
+				width:32vw;
+                min-height: 120px;
+				margin-right:10px;
 				.rtl-layout &{
 					float:right;
 					margin-left:15px;
@@ -764,7 +767,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		top: -50px;
 		text-align: right;
 		.rtl-layout &{
-			text-align:left
+			text-align:left;
 			right:auto;
 			left:-5px;
 		}
@@ -772,17 +775,27 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 }
 //Home page
 .wrapper-ads07{
+    background: #F4FAFF;
+    padding: 0 20px;
+    height: 80px;
 	.text-area{
 		.abs-transition;
-		position:relative; padding: 10px 0 10px 70px;
+		position:relative; padding: 10px 0 10px 50px;
 		.rtl-layout &{
 			padding: 10px 70px 10px 0;
 		}
 		.icon-font{
-			float:left; font-size:0; width:60px; height:60px; line-height:60px; text-align:center; position: absolute; left: 0; top:0;
-			.lib-css(color, @main_note_text);
-			.lib-css(border, 2px solid @main_note_text);
-			.abs-borderradius(100%);
+			float:left; font-size:0; width:40px; height:40px; line-height:40px; text-align:center; position: absolute; left: 0; top:0;
+            display: inline-block;
+            font-family: 'icomoon';
+            speak: none;
+            font-style: normal;
+            font-weight: normal;
+            font-variant: normal;
+            text-transform: none;
+            .lib-css(color, @main_note_text);
+			//.lib-css(border, 2px solid @main_note_text);
+			//.abs-borderradius(100%);
 			.abs-transition();
 			.rtl-layout &{
 				left:auto;
@@ -793,13 +806,28 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 				line-height:55px;
 			}
 			&:hover{
-				.abs-cssall(#ffffff, #1e84cc, #1e84cc);
+				//.abs-cssall(#ffffff, #1e84cc, #1e84cc);
 			}
 		}
+        .ico-warrany:before {
+            content: '\e936';
+            color: #155DA4;
+            font-size: 40px;
+        }
+        .ico-shipping:before {
+            content: '\e921';
+            color: #155DA4;
+            font-size: 40px;
+        }
+        .ico-support:before {
+            content: '\e91f';
+            color: #155DA4;
+            font-size: 40px;
+        }
 		h4{
-			color:#303030; margin:0;font-weight: 600; font-size:18px;white-space: nowrap;
+			color:#333333; margin:0;font-weight: 600; font-size:14px;white-space: nowrap;line-height: 1.5;
 		}
-		p.text{color:#acacac; font-size:15px;}
+		p.text{color:#999999; font-size:12px;line-height: 1.5;}
 	}
 }
 //social
@@ -1246,10 +1274,11 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	//.nav-toggle:before{background:@header_cart_background !important}
 	.slideshow-banner{ margin:0 -15px}
 	.cdz-banner{
-		margin-bottom:5px;
+		//margin-bottom:5px;
 	}
 	.column.main .block:last-child{
-		margin-bottom:20px;
+        margin-top: 0;
+		margin-bottom:0;
 	}
 	.space-md {
 		margin-bottom: 20px;
@@ -1338,6 +1367,106 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
             }
         }
     }
+
+    .product-style05 {
+        .products-grid {
+            .item a.product-item-photo {
+                .main-image {
+                    .product-image-container {
+                        padding: 16px 0 8px;
+                        position: relative;
+                        width: 100% !important;
+                    }
+                }
+            }
+        }
+    }
+
+    .product-list-style02 {
+        .block-title {
+            border-bottom: 1px solid #dbdbdb;
+            padding: 11px 20px 0 !important;
+            margin-bottom: 0 !important;
+            color: #333333 !important;
+            background: #ffffff !important;
+            .b-title {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 19px;
+                border-bottom: 3px solid #155da4;
+                padding-bottom: 8px;
+                display: inline-block;
+            }
+        }
+        .block-content {
+            border: none;
+        }
+        .products-list {
+            .product-item {
+                margin-top: 0;
+                padding: 8px 16px;
+                .product-item-details {
+                    margin: 0;
+                    .price-box {
+                        margin: 0;
+                        font-size: 16px;
+                        line-height: 19px;
+                    }
+                }
+            }
+            .product-item-link {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 1.3;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 3;
+            }
+        }
+        .product-items {
+            .product-item-details {
+                .product-item-name {
+                    margin-bottom: 8px;
+                }
+            }
+        }
+    }
+
+    .our-brands {
+        .block-title {
+            border-bottom: 1px solid #dbdbdb;
+            padding: 11px 20px 0 !important;
+            margin-bottom: 0 !important;
+            color: #333333 !important;
+            background: #ffffff !important;
+            .b-title {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 19px;
+                border-bottom: 3px solid #155da4;
+                padding-bottom: 8px;
+                display: inline-block;
+            }
+        }
+        .block-content {
+            padding: 16px !important;
+        }
+        .abs-img img {
+            position: absolute;
+            width: 100%;
+            top: -44px;
+            left: 0;
+        }
+        .brand-item {
+            height: 80px;
+        }
+    }
+
+    .space-base {
+        margin-bottom: 4px;
+    }
     /* custom style end */
 
 	a.mobile-toggle {
@@ -1375,10 +1504,16 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 		padding: 8px 15px;
 	}
 	.product-style05 .products-grid .product-item{
-		padding:0 10px;
+        padding: 0;
 		.product-item-link {
-			font-size: 12px !important;
+			font-size: 14px !important;
+            -webkit-line-clamp: 2;
 		}
+        .product-item-info {
+            .cdz-hover-section {
+                width: 44vw;
+            }
+        }
 	}
 	//.product-item-name{
 	//	white-space: nowrap;
@@ -1386,7 +1521,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	//	text-overflow: ellipsis;
 	//}
 	.product-style05 .products-grid .product-item .price-box .price {
-		font-size: 12px;
+		font-size: 14px;
 	}
 	.owl-carousel .owl-nav{
 		position:absolute;
