--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/module/_toolbar.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/web/css/source/module/_toolbar.less
@@ -80,9 +80,10 @@
         .page-products & {
             padding-right: 15px;
             right: @indent__s;
-            top: 0;
+            top: 16px;
             z-index: 1;
             font-size: 14px;
+            position: absolute;
         }
 		.rtl-layout.page-products &{
 			right:auto;
