--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/_layout.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/_layout.less
@@ -66,6 +66,7 @@
             display: none;
         }
     }
+    .block.block-brands{ display: none; }
     .products-grid {
         padding-left: 16px;
         padding-right: 16px;
