--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/gallery.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/templates/product/view/gallery.phtml
@@ -13,84 +13,124 @@
  */
 ?>
 <?php
-	$_optionHelper = $this->helper('Codazon\ThemeOptions\Helper\Data');
-	$width = $_optionHelper->getConfig('general_section/product_view/base_image_width') ?: $block->getImageAttribute('product_page_image_medium', 'width');
-	$height = $_optionHelper->getConfig('general_section/product_view/base_image_height') ?: $block->getImageAttribute('product_page_image_medium', 'height');
-	$thumbWidth = 	$_optionHelper->getConfig('general_section/product_view/moreview_image_width') ?: $block->getImageAttribute('product_page_image_small', 'width');
-	$thumbHeight = 	$_optionHelper->getConfig('general_section/product_view/moreview_image_height') ?: $block->getImageAttribute('product_page_image_small', 'height');
-	$fullViewType = $_optionHelper->getConfig('general_section/product_view/full_view_type');
-	$allowFullScreen = is_null($fullViewType)?$block->getVar("gallery/allowfullscreen"):(($fullViewType!='pop_up')?'true':'false');
-	$productLensZoom = $_optionHelper->getConfig('general_section/product_view/product_lens_zoom');
-    $labelHelper = $this->helper('Codazon\ProductLabel\Helper\Data');
+$_optionHelper = $this->helper('Codazon\ThemeOptions\Helper\Data');
+$width = $_optionHelper->getConfig('general_section/product_view/base_image_width') ?: $block->getImageAttribute('product_page_image_medium', 'width');
+$height = $_optionHelper->getConfig('general_section/product_view/base_image_height') ?: $block->getImageAttribute('product_page_image_medium', 'height');
+$thumbWidth = 	$_optionHelper->getConfig('general_section/product_view/moreview_image_width') ?: $block->getImageAttribute('product_page_image_small', 'width');
+$thumbHeight = 	$_optionHelper->getConfig('general_section/product_view/moreview_image_height') ?: $block->getImageAttribute('product_page_image_small', 'height');
+$fullViewType = $_optionHelper->getConfig('general_section/product_view/full_view_type');
+$allowFullScreen = is_null($fullViewType)?$block->getVar("gallery/allowfullscreen"):(($fullViewType!='pop_up')?'true':'false');
+$productLensZoom = $_optionHelper->getConfig('general_section/product_view/product_lens_zoom');
+$labelHelper = $this->helper('Codazon\ProductLabel\Helper\Data');
 ?>
 <script type="text/javascript">
-	<?php $requireJs = ($fullViewType == 'popup')?"'jquery','Magento_Catalog/js/cdzZoom','Magento_Ui/js/modal/modal','js/jquery.nicescroll.min'":"'jquery','Magento_Catalog/js/cdzZoom','Magento_Ui/js/modal/modal'"; ?>
+    <?php $requireJs = ($fullViewType == 'popup')?"'jquery','Magento_Catalog/js/cdzZoom','Magento_Ui/js/modal/modal','js/jquery.nicescroll.min'":"'jquery','Magento_Catalog/js/cdzZoom','Magento_Ui/js/modal/modal'"; ?>
 
-	require([<?php echo $requireJs ?>],function ($) {
-		var imgModal = false, $imgBox = false;
-		var widthImage = <?php /* @escapeNotVerified */ echo $width; ?>;
-		$("[data-gallery-role=gallery-placeholder]").on("gallery:loaded",function () {
-			//=== fix width change after gallery load ===
-			/*var widthColumn = $('.columns').width();
-			var percentWidthImage = widthImage/widthColumn * 100;
-			var percentWidthInfo = 100 - percentWidthImage - 3;
-			if(percentWidthImage < 61)
-			{
-				$('.product.media').css('width',percentWidthImage+'%');
-				$('.product-info-main').css('width',percentWidthInfo+'%');
-			}*/
+    require([<?php echo $requireJs ?>],function ($) {
+        var imgModal = false, $imgBox = false;
+        var widthImage = <?php /* @escapeNotVerified */ echo $width; ?>;
+        $("[data-gallery-role=gallery-placeholder]").on("gallery:loaded",function () {
+            //=== fix width change after gallery load ===
+            /*var widthColumn = $('.columns').width();
+            var percentWidthImage = widthImage/widthColumn * 100;
+            var percentWidthInfo = 100 - percentWidthImage - 3;
+            if(percentWidthImage < 61)
+            {
+                $('.product.media').css('width',percentWidthImage+'%');
+                $('.product-info-main').css('width',percentWidthInfo+'%');
+            }*/
             //=== end fix ===
-			<?php if($fullViewType == 'pop_up'): ?>
-			if( $('#cdz-img-box').length == 0 ){
-				var $this = $(this);
-				var $wrap = $('.fotorama__wrap',$this);
-				var $viewFullBtn = $('<a class="full-view" href="javascript:void(0)">Full</a>');
-				$imgBox = $('<div class="cdz-img-box" id="cdz-img-box"><div class="img-box-inner"><img class="full-img" src="" /></div></div>');
-				$viewFullBtn.appendTo($('.fotorama__stage',$wrap));
-				$imgBox.hide().appendTo('body');
-				imgModal = $imgBox.modal({
-					wrapperClass: 'product-image-box',
-					buttons: [],
-					innerScroll: true,
-					modalVisibleClass: '_show',
-					opened: function(){
-						$('#cdz-img-box').parents('.modal-content').first().niceScroll({cursorcolor:'#999999', cursorborder:'#747070'});
-					}
-				});
-				$viewFullBtn.on('click',function(e){
-					e.preventDefault();
+            <?php if($fullViewType == 'pop_up'): ?>
+            if( $('#cdz-img-box').length == 0 ){
+                var $this = $(this);
+                var $wrap = $('.fotorama__wrap',$this);
+                var $viewFullBtn = $('<a class="full-view" href="javascript:void(0)">Full</a>');
+                $imgBox = $('<div class="cdz-img-box" id="cdz-img-box"><div class="img-box-inner"><img class="full-img" src="" /></div></div>');
+                $viewFullBtn.appendTo($('.fotorama__stage',$wrap));
+                $imgBox.hide().appendTo('body');
+                imgModal = $imgBox.modal({
+                    wrapperClass: 'product-image-box',
+                    buttons: [],
+                    innerScroll: true,
+                    modalVisibleClass: '_show',
+                    opened: function(){
+                        $('#cdz-img-box').parents('.modal-content').first().niceScroll({cursorcolor:'#999999', cursorborder:'#747070'});
+                    }
+                });
+                $viewFullBtn.on('click',function(e){
+                    e.preventDefault();
                     var bg = $('.fotorama__active .magnify').css('background-image');
                     bg = bg.replace('url(','').replace(')','').replace(/\"/gi, "");
-					$('.full-img',$imgBox).attr('src',bg);
-					imgModal.modal('openModal');
-				});
-			}
-			<?php endif ?>
-		});
-		<?php if($productLensZoom == '1'): ?>
-		$("[data-gallery-role=gallery-placeholder]").on("fotorama:showend fotorama:load",function () {
-			var $this = $(this);
-			var $stage = $('.fotorama__stage',$this);
-			$('.fotorama__stage__frame',$stage).not('.fotorama-video-container').each(function(i,e){
-				var $frame = $(this);
-				$frame.cdzZoom();
-				if(imgModal){
-					$('.magnify',$this).on('click',function(e){
-						e.preventDefault();
-						$('.full-img',$imgBox).attr('src',$('.fotorama__active').attr('href'));
-						imgModal.modal('openModal');
-					});
-				}
-			});
-		});
-		<?php endif ?>
-	})
+                    $('.full-img',$imgBox).attr('src',bg);
+                    imgModal.modal('openModal');
+                });
+            }
+            <?php endif ?>
+        });
+        <?php if($productLensZoom == '1'): ?>
+        $("[data-gallery-role=gallery-placeholder]").on("fotorama:showend fotorama:load",function () {
+            var $this = $(this);
+            var $stage = $('.fotorama__stage',$this);
+            $('.fotorama__stage__frame',$stage).not('.fotorama-video-container').each(function(i,e){
+                var $frame = $(this);
+                $frame.cdzZoom();
+                if(imgModal){
+                    $('.magnify',$this).on('click',function(e){
+                        e.preventDefault();
+                        $('.full-img',$imgBox).attr('src',$('.fotorama__active').attr('href'));
+                        imgModal.modal('openModal');
+                    });
+                }
+            });
+        });
+        <?php endif ?>
+    })
 </script>
 <?php $labelHelper->showLabel($this->getProduct()) ?>
 <div class="gallery-placeholder _block-content-loading" data-gallery-role="gallery-placeholder">
     <div class="loader gallery-placeholder__image" data-role="loader"></div>
 </div>
 <!--Fix for jumping content. Loader must be the same size as gallery.-->
+
+<style>
+    .custom-style-galleryshare{
+        display: flex;
+        margin-left: 135px;
+        align-items: center;
+    }
+    .custom-style-galleryshare-fb:before{
+        font-family: 'icomoon';
+        content: "\e935";
+        font-size: 23px;
+        margin-left:10px;
+        color:#333333;
+    }
+    .custom-style-galleryshare-tw:before{
+        font-family: 'icomoon';
+        content: "\e920";
+        font-size: 23px;
+        margin-left:10px;
+        color:#666666;
+    }
+    .custom-style-galleryshare-pn:before{
+        font-family: 'icomoon';
+        content: "\e91e";
+        font-size: 23px;
+        margin-left:10px;
+        color:#666666;
+    }
+    .custom-style-galleryshare-fb:hover, .custom-style-galleryshare-tw:hover, .custom-style-galleryshare-pn:hover {
+        text-decoration:none;
+    }
+</style>
+
+<div class="custom-style-galleryshare">
+    <span>Share: </span>
+    <a  href="" class="custom-style-galleryshare-fb"  ></a>
+    <a  href="" class="custom-style-galleryshare-tw"  ></a>
+    <a  href="" class="custom-style-galleryshare-pn"  ></a>
+</div>
+
 <script>
     var config = {
             "width": <?php /* @escapeNotVerified */ echo $width; ?>,
@@ -128,9 +168,9 @@
                     "width": <?php /* @escapeNotVerified */ echo $width; ?>,
                     "thumbwidth": <?php /* @escapeNotVerified */ echo $thumbWidth; ?>,
                     "thumbheight": <?php /* @escapeNotVerified */ echo $thumbHeight
-                        ?: $thumbWidth; ?>,
+        ?: $thumbWidth; ?>,
                     "height": <?php /* @escapeNotVerified */ echo $height
-                        ?: $width ?>,
+        ?: $width ?>,
                     <?php if ($block->getVar("gallery/transition/duration")): ?>
                         "transitionduration": <?php /* @escapeNotVerified */  echo $block->getVar("gallery/transition/duration"); ?>,
                     <?php endif; ?>
@@ -160,4 +200,3 @@
         }
     }
 </script>
-
