--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/layout/catalog_product_view.xml
@@ -21,8 +21,8 @@
             <argument name="at_call" xsi:type="string">getShortDescription</argument>
             <argument name="at_code" xsi:type="string">short_description</argument>
             <argument name="css_class" xsi:type="string">overview</argument>
-            <argument name="at_label" translate="true" xsi:type="string">Overview</argument>
-            <argument name="title" translate="true" xsi:type="string">Overview</argument>
+            <argument name="at_label" translate="true" xsi:type="string">Key Features</argument>
+            <argument name="title" translate="true" xsi:type="string">Key Features</argument>
             <argument name="add_attribute" xsi:type="string">itemprop="description"</argument>
         </arguments>
 	</referenceBlock>
