--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
@@ -231,6 +231,7 @@
 					}
 					.action{
 						display:inline-block;
+                        padding-left: 10px;
 					}
 				}
             }
@@ -690,6 +691,11 @@
 		}
 		.block-content{ padding:0}
 	}
+
+    .filter-clear {
+        padding-left: 10px;
+    }
+
 	.filter {
 		&-title {
 			strong {
@@ -697,7 +703,7 @@
 				left: 5px;
 				position: absolute;
 				text-align: center;
-				top: 10px;
+				top: -44px;
 				z-index: 2;
 				display:inline-block;
 				//border:@_btnline solid @btn_primary_border !important;
@@ -742,6 +748,6 @@
 		}
 	}
 	.page-products .page-main .columns{
-		padding-top: 0;
+		padding-top: 60px;
 	}
 }
