--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_header.less
@@ -604,8 +604,7 @@
                     right: -0.5px;
                     width: 56px;
                     background: #10477D;
-                    border-top-right-radius: 4px;
-                    border-bottom-right-radius: 4px;
+                    border-radius: 0 4px 4px 0;
                     &:before {
                         color: #ffffff;
                     }
