--- a/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech/Magento_Catalog/web/css/source/_module.less
@@ -1316,7 +1316,7 @@
     margin:  0 !important;
 }
 .block-shipping-estimation {
-    display: none;
+    display: none !important;
 }
 .swatch-attribute-label{
     font-style: normal;
