add product nsf.

--- a/app/code/Flurrybox/EnhancedPrivacy/view/frontend/web/css/source/_module.less
+++ b/app/code/Flurrybox/EnhancedPrivacy/view/frontend/web/css/source/_module.less
@@ -28,6 +28,11 @@
       width: @screen__m;
     }
   }
+    .actions-toolbar{
+        .secondary {
+            margin-left: 10px;
+        }
+    }
 }
 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
