--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_Catalog/layout/catalog_product_view.xml
@@ -16,6 +16,9 @@
 	<referenceBlock name="catalog.leftnav" remove="true"/>
 	<move element="product.info.overview" destination="product.info.main" after="product.info.review" />
 
+    <referenceBlock name="page.main.title">
+        <block class="Magento\Catalog\Block\Product\View\Description" name="product.subtitle" template="product/view/subtitle.phtml" />
+    </referenceBlock>
 	<referenceBlock name="product.info.overview" template="product/view/short_description.phtml">
 		<arguments>
             <argument name="at_call" xsi:type="string">getShortDescription</argument>
